--- a/GraphQL/package.json
+++ b/GraphQL/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-graphql": "^0.12.0",
     "nodemon": "^3.1.0"
   }
 }
