--- a/GraphQL/package.json
+++ b/GraphQL/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "nodemon": "^3.1.0"
