--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   }
 }
