--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "got": "^14.2.1",
+    "graphql-http": "^1.22.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   }
